// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SectionBackground /> > should render with dark background 1`] = `
.c0 {
  background-color: #fff;
  color: #0a1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0a1128;
  color: #fff;
}

.c1 {
  max-width: 75rem;
  margin: 0 auto;
  padding: 2rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1>
        children
      </h1>
    </div>
  </div>
</div>
`;

exports[`<SectionBackground /> > should render with light background 1`] = `
.c0 {
  background-color: #fff;
  color: #0a1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 75rem;
  margin: 0 auto;
  padding: 2rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1>
        children
      </h1>
    </div>
  </div>
</div>
`;
